# villa

segmentation/models/arch/nnunet/nnunetv2/training/loss/: compound_losses.py  dice.py  supervoxel_loss_multiclass.py
segmentation/models/arch/nnunet/nnunetv2/training/nnUNetTrainer/variants/loss/: nnUNetTrainerSkeletonSuperVoxel.py
vesuvius/: .gitignore  pytest.ini  setup.py
vesuvius/data/: volume.py
vesuvius/optimize_fields/: config.yaml  dataset.py  io_utils.py  optimizer.py  runner.py  utils.py
vesuvius/optimize_fields/tests/: quaternion_utils_demo.py  test_opt_utils.py  test_optimizer_initializers.py  test_quaternion_utils.py
vesuvius/src/vesuvius/data/: vc_dataset.py
vesuvius/src/vesuvius/docs/: accessing_data.md  data_formatting.md  inference.md  training_flow.md
vesuvius/src/vesuvius/models/augmentation/transforms/intensity/: brightness.py  contrast.py  gamma.py  gaussian_noise.py
vesuvius/src/vesuvius/models/augmentation/transforms/noise/: extranoisetransforms.py  gaussian_blur.py
vesuvius/src/vesuvius/models/augmentation/transforms/spatial/: spatial.py
vesuvius/src/vesuvius/models/augmentation/transforms/utils/: skeleton_transform.py
vesuvius/src/vesuvius/models/configuration/: config_manager.py
vesuvius/src/vesuvius/models/configuration/aux_tasks/: inplane_and_medialsurf.yaml
vesuvius/src/vesuvius/models/configuration/single_task/: ps192_dicece.yaml  ps192_medial.yaml  ps256_medial_2d.yaml
vesuvius/src/vesuvius/models/configuration/topological/: st_betti_and_medialsurf.yaml
vesuvius/src/vesuvius/models/datasets/: __init__.py  base_dataset.py  image_dataset.py  sample_slice_batches.py
vesuvius/src/vesuvius/models/evaluation/: skeleton_branch_points.py
vesuvius/src/vesuvius/models/run/: finalize_outputs.py  inference.py  vesuvius_pipeline.py
vesuvius/src/vesuvius/models/training/: train.py  wandb_logging.py
vesuvius/src/vesuvius/models/training/auxiliary_tasks/: __init__.py  apply_aux_targets.py  aux_distance_transform.py  aux_inplane_direction.py  aux_structure_tensor.py
vesuvius/src/vesuvius/models/training/loss/: betti_losses.py  nnunet_losses.py
vesuvius/src/vesuvius/models/training/trainers/self_supervised/: train_eva_mae.py
vesuvius/src/vesuvius/scripts/: voxelize_objs.py
vesuvius/src/vesuvius/utils/: plotting.py
vesuvius/src/vesuvius/utils/models/: load_nnunet_model.py
vesuvius/structure_tensor/: compute_vf.py  create_st.py  create_vf.py  run_create_st.py  smooth_vf.py  vf_io.py
vesuvius/structure_tensor/tests/: test_structure_tensor.py  test_vector_field.py  test_vf_format.py  test_vf_io.py
volume-cartographer/: README.md  iter_sweep.csv  sweep.csv  sweep.json
volume-cartographer/apps/: CMakeLists.txt
volume-cartographer/apps/VC3D/: BBoxTypes.hpp  CMakeLists.txt  CVolumeViewer.cpp  CVolumeViewer.hpp  CWindow.cpp  CWindow.hpp  CWindowContextMenu.cpp  CommandLineToolRunner.cpp  CommandLineToolRunner.hpp  OverlayBoundingBox3d.cpp  OverlayBoundingBox3d.hpp  OverlayHandler.cpp  OverlayHandler.hpp  OverlaySegmentationIntersections.cpp  OverlaySegmentationIntersections.hpp  SeedingWidget.cpp  SeedingWidget.hpp  SurfaceTreeWidget.hpp  VCMain.ui
volume-cartographer/apps/diffusion/: support.cpp
volume-cartographer/apps/src/: vc_bench_ptto_grid.cpp  vc_bench_ptto_surface.cpp  vc_benchmark_pointto.cpp  vc_grow_seg_from_seed.cpp  vc_ngrid.cpp  vc_obj2tifxyz_legacy.cpp  vc_render_tifxyz.cpp  vc_test_normalloss.cpp
volume-cartographer/core/: CMakeLists.txt
volume-cartographer/core/include/vc/core/types/: ChunkedTensor.hpp  Volume.hpp  VolumePkg.hpp
volume-cartographer/core/include/vc/core/util/: CostFunctions.hpp  GridStore.hpp  NormalGridVolume.hpp  Slicing.hpp  Surface.hpp  normalgridtools.hpp
volume-cartographer/core/include/vc/tracer/: Tracer.hpp
volume-cartographer/core/src/: CostFunctions.cpp  GridStore.cpp  GrowPatch.cpp  GrowSurface.cpp  NormalGridVolume.cpp  Surface.cpp  Volume.cpp  VolumePkg.cpp  normalgridtools.cpp
volume-cartographer/libs/flatboi/: flatboi.cpp
volume-cartographer/scripts/: voxelize_objs.py
volume-cartographer/scripts/evaluation/: eval_surface_tracer.py  example_config.json  run_seeding.py
